tests/errors/semantic/non_blocking/UNION_RETURN_TYPE_types.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from pyccel.decorators import types

@types('int', 'int', results=['int'])
@types('float', 'float', results=['float'])
def f(a, b):
    return a+b
